register ui setup

--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -1,1 +1,7 @@
-.Register {}
+.Register {
+    .register-box {
+        width: 50vw;
+        height: 60vh;
+        background-color: blue;
+    }
+}
