--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
 //  font style imports
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Rubik:wght@400;500;600;700;800;900&display=swap');
 
+html, body{
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
