register ui setup

--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -16,7 +16,7 @@
         padding: 3rem;
         .header {
             margin-bottom: 3rem;
-            h1 {}
+            // h1 {}
             p {
                 font-size: 14px;
             }
@@ -93,6 +93,7 @@
                 }
             }
             .actions {
+                align-self: center;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
