building profile page ui setup

--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -14,7 +14,7 @@
         box-sizing: border-box;
         border-radius: 30px;
         padding: 3rem;
-        .header {
+        .register-header {
             margin-bottom: 3rem;
             // h1 {}
             p {
