--- a/src/pages/Register/Talent/Talent.scss
+++ b/src/pages/Register/Talent/Talent.scss
@@ -32,7 +32,7 @@
                 cursor: pointer;
             }
         }
-        .header {
+        .talen-header {
             margin-bottom: 2rem;
             // h1 {}
             p {
