--- a/src/pages/Register/Creator/Creator.scss
+++ b/src/pages/Register/Creator/Creator.scss
@@ -32,7 +32,7 @@
                 cursor: pointer;
             }
         }
-        .header {
+        .creator-header {
             margin-bottom: 2rem;
             // h1 {}
             p {
