--- a/src/components/Talent/Welcome/welcome.scss
+++ b/src/components/Talent/Welcome/welcome.scss
@@ -3,7 +3,7 @@
     .welcome-sketch {
         height: 40rem;
         min-width: 100%;
-        background: rgba(237, 237, 237, 0.7);
+        background: linear-gradient(92.06deg, rgba(205, 103, 127, 0.15) 28.43%, rgba(5, 232, 218, 0.15) 127.81%);
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 62vh, 0 100%);
         clip-path: polygon(0 0, 100% 0, 100% 62vh, 0 100%);
         z-index: 100;
