--- a/src/components/Talent/Footer/footer.scss
+++ b/src/components/Talent/Footer/footer.scss
@@ -1,9 +1,86 @@
 .footer {
-    height: 276px;
-    color: white;
-    background-color: #282c34;
-    width: 100%;
-    text-align: center;
+    height: max-content;
+    color: #ffffff;
+    background-color: #000000;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 5rem;
     position: relative;
     z-index: 1500;
+    .first-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        .higher-link {
+            width: 50%;
+            justify-self: flex-start;
+            align-self: flex-start;
+            margin-left: -4.2rem;
+            margin-top: -1rem;
+            ul {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: flex-start;
+                color: #FFFFFF;
+                li {
+                    text-decoration: none;
+                    list-style: none;
+                    font-weight: 700;
+                    font-size: 15px;
+                    text-transform: capitalize;
+                    a {
+                        text-decoration: none;
+                        color: #FFFFFF;
+                        text-transform: capitalize;
+                        font-weight: 500;
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+        .social-icons {
+            width: 13%;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+        }
+    }
+    hr {
+    color: #6b6b6b;
+    width: 100%;
+    height: .1px;
+    }
+    .second-row {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        .lower-link {
+            width: 50%;
+            justify-self: flex-start;
+            align-self: flex-start;
+            margin-left: -6rem;
+            ul {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: flex-start;
+                color: #AFAFAF;
+                li {
+                    text-decoration: none;
+                    list-style: none;
+                    font-weight: 700;
+                    font-size: 15px;
+                    text-transform: capitalize;
+                    a {
+                        text-decoration: underline;
+                        color: #AFAFAF;
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
+        .copyright {
+            font-size: 14px;
+        }
+    }
 }
