--- a/src/components/Talent/Header/header.scss
+++ b/src/components/Talent/Header/header.scss
@@ -1,8 +1,68 @@
 .header {
     height: 80px;
-    color: white;
-    background-color: #282c34;
-    width: 100%;
-    text-align: center;
-    margin-top: -1.3rem;
+    color: #ffffff;
+    background-color: #000000;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
+    .navigation {
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 2rem;
+        .logo {
+            width: 30%;
+            justify-self: flex-start;
+            img {
+                width: 154px;
+                height: 32px;
+            }
+        }
+        nav {
+            width: 70%;
+            justify-self: flex-start;
+            ul {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                li {
+                    text-decoration: none;
+                    list-style: none;
+                    font-weight: 700;
+                    font-size: 15px;
+                    text-transform: capitalize;
+                }
+            }
+        }
+    }
+    .profile-box {
+        width: 25%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        img {
+            width: 40px;
+            height: 40px;
+            margin-right: 1rem;
+        }
+        .box-address {
+            background: #E8E8E8;
+            border-radius: 30px;
+            padding: .1rem 2rem;
+            font-weight: 600;
+            font-size: 13px;
+            color: #333333;
+            span {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                p {
+                    margin-right: .6rem;
+                }
+            }
+        }
+    }
 }
