--- a/src/components/Talent/Course-Module/course-module.scss
+++ b/src/components/Talent/Course-Module/course-module.scss
@@ -71,4 +71,39 @@
             }
         }
     }
+    .module-content {
+        margin-top: 5rem;
+        h2 {
+            margin-bottom: 1.3rem;
+        }
+    }
+}
+
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root {
+    margin: 1rem 0 !important;
+}
+
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root {
+    background-color: transparent !important;
+    border-radius: none !important;
+    box-shadow: none !important;
+}
+
+// .css-o4b71y-MuiAccordionSummary-content.Mui-expanded {
+//     margin: 0 !important;
+// }
+
+// .css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root.Mui-expanded {
+//     min-height: 0 !important;
+//     border-bottom: 1px solid black !important;
+// }
+
+.css-1elwnq4-MuiPaper-root-MuiAccordion-root:before {
+    background-color: transparent !important;
+}
+
+.css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root {
+    background: #FFFFFF !important;
+    border: 2px solid #000000 !important;
+    border-radius: 30px !important;
 }
