--- a/src/components/Talent/Dashboard/dashboard.scss
+++ b/src/components/Talent/Dashboard/dashboard.scss
@@ -7,7 +7,7 @@
         align-items: center;
         padding-left: 1.3rem;
         margin-bottom: 3rem;
-        h1 {}
+        // h1 {}
         .dashboard-header-actions {
             display: flex;
             justify-content: flex-start;
@@ -427,9 +427,351 @@
     }
 }
 
+.course-list {
+    padding: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    .list-single {
+        width: 48%;
+        // width: 306px;
+        height: 104px;
+        margin-bottom: 16%;
+        display: flex;
+        justify-content: flex-start;
+        border: 0.5px solid #DBDBDB;
+        border-radius: 20px;
+        .photo-sec {
+            width: 30%;
+            background-image: url('./../../../assets/images/lay.png');
+            background-size: cover;
+            background-position: center;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+        }
+        .content-sec {
+            width: 70%;
+            background: #ffffff;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: .7rem;
+            border-top-right-radius: 20px;
+            border-bottom-right-radius: 20px;
+            .text {
+                width: 60%;
+                align-self: flex-start;
+                h4 {
+                    margin: 0;
+                    margin-bottom: .4rem;
+                    font-weight: 500;
+                    font-size: 12px;
+                }
+                p {
+                    margin: 0;
+                    margin-bottom: 1.2rem;
+                    font-size: 6px;
+                    line-height: 8px;
+                }
+                span {
+                    display: flex;
+                    justify-content: space-between;
+                    .remaining, .time-rem {
+                        display: flex;
+                        align-items: center;
+                        font-weight: 600;
+                        font-size: 7px;
+                    }
+                }
+            }
+            .progress {
+                width: 25%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                border: 4px solid #0AAC06;
+                padding: .9rem  .1rem;
+                border-radius: 50%;
+                    .percent {
+                        margin: 0;
+                        font-weight: 700;
+                        font-size: 11px;
+                        line-height: 11px;
+                    }
+            }
+        }
+    }
+}
+
+.certificate-list {
+    padding: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    .list-single {
+        width: 48%;
+        // width: 306px;
+        height: 104px;
+        margin-bottom: 16%;
+        display: flex;
+        justify-content: flex-start;
+        border: 0.5px solid #DBDBDB;
+        border-radius: 20px;
+        .photo-sec {
+            width: 30%;
+            background-image: url('./../../../assets/images/tay.png');
+            background-size: cover;
+            background-position: center;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+        }
+        .content-sec {
+            width: 70%;
+            background: #ffffff;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: .7rem;
+            border-top-right-radius: 20px;
+            border-bottom-right-radius: 20px;
+            .text {
+                width: 60%;
+                align-self: flex-start;
+                h4 {
+                    margin: 0;
+                    margin-bottom: .4rem;
+                    font-weight: 600;
+                    font-size: 12px;
+                }
+                p {
+                    margin: 0;
+                    margin-bottom: 1.2rem;
+                    font-size: 8px;
+                    line-height: 10px;
+                    color: #737373;
+                }
+                span {
+                    display: flex;
+                    justify-content: space-between;
+                    .issue-time {
+                        display: flex;
+                        align-items: center;
+                        font-weight: 600;
+                        font-size: 7px;
+                    }
+                }
+            }
+            .cert {
+                width: 25%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                    img {
+                        margin: 0;
+                        font-weight: 700;
+                        font-size: 11px;
+                        line-height: 11px;
+                    }
+            }
+        }
+    }
+}
+
+.bounty-list {
+    padding: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    .list-single {
+        width: 48%;
+        // width: 306px;
+        height: 104px;
+        margin-bottom: 16%;
+        display: flex;
+        justify-content: flex-start;
+        border: 0.5px solid #DBDBDB;
+        border-radius: 20px;
+        .photo-sec {
+            width: 30%;
+            background-image: url('./../../../assets/images/bay.png');
+            background-size: cover;
+            background-position: center;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+        }
+        .content-sec {
+            width: 70%;
+            background: #ffffff;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1.3rem;
+            border-top-right-radius: 20px;
+            border-bottom-right-radius: 20px;
+            .text-h {
+                min-width: 100%;
+                align-self: flex-start;
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 1.3rem;
+                h4 {
+                    margin: 0;
+                    font-weight: 500;
+                    font-size: 16px;
+                }
+                p {
+                    width: 30%;
+                    margin: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 8px;
+                    font-weight: 700;
+                    color: #8C6605;
+                    border: 2px solid #8C6605;
+                    border-radius: 30px;
+                    padding: .1rem .2rem;
+                }
+            }
+            .text-b {
+                align-self: flex-start;
+                min-width: 100%;
+                display: flex;
+                justify-content: space-between;
+                .b-body {
+                    h4 {
+                        margin: 0;
+                        font-size: 6px;
+                        color: #737373;
+                        font-weight: 700;
+                    }
+                    p {
+                        margin: 0;
+                        font-weight: 500;
+                        font-size: 10px;
+                        color: #090808;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.nft-list {
+    padding: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    .list-single {
+        width: 47%;
+        height: 330px;
+        margin-bottom: 16%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        border-radius: 30px;
+        background: #f7f7f7;
+        .photo-sec {
+            height: 55%;
+            background-image: url('./../../../assets/images/nft-overlay.png');
+            background-size: cover;
+            background-position: center;
+            border-top-left-radius: 30px;
+            border-top-right-radius: 30px;
+        }
+        .text-sec {
+            height: 45%;
+            padding: 0 1.3rem;
+            h3 {
+                font-weight: 500;
+                font-size: 18px;
+            }
+            .text-sec-body {
+                display: flex;
+                justify-content: space-between;
+                .text-body-content {
+                    display: flex;
+                    justify-content: space-between;
+                    .text-secky {
+                        margin-right: .6rem ;
+                        h4 {
+                            margin: 0;
+                            font-size: 10px;
+                            line-height: 13px;
+                            color: #B7B7B7;
+                        }
+                        p {
+                            margin: 0;
+                            font-weight: 700;
+                            font-size: 12px;
+                            line-height: 13px;
+                        }
+                    }
+                }
+                .text-body-con {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    img {
+                        width: 25px;
+                        height: 25px;
+                        margin-right: .3rem;
+                    }
+                    p {
+                        margin: 0;
+                        font-size: 12px;
+                        font-weight: 500;
+                        color: #655E5E;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .delete-avatar {
     border: none;
     // background: #d4efdf;
     border-radius: 50%;
     padding: .8rem;
+}
+
+.css-1gsv261 {
+    background: #FFFFFF;
+    border: 2px solid #FCF3F3;
+    border-radius: 30px;
+    padding: 0.5rem 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
+    color: #ffffff;
+    font-size: 13px;
+    background: linear-gradient(92.06deg, #CD677F 28.43%, #05E8DA 127.81%);
+    border-radius: 30px;
+    font-weight: 700;
+    text-transform: capitalize;
+    padding: 0.7rem 2.8rem;
+}
+
+.css-1h9z7r5-MuiButtonBase-root-MuiTab-root {
+    color: #737373;
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.css-1aquho2-MuiTabs-indicator {
+    display: none !important;
+}
+
+.css-13xfq8m-MuiTabPanel-root {
+    padding: 0;
 }
