--- a/src/components/Talent/Dashboard/dashboard.scss
+++ b/src/components/Talent/Dashboard/dashboard.scss
@@ -189,26 +189,51 @@
             justify-content: flex-start;
             align-items: center;
             .body-data-stats {
-                width: 810px;
-                height: 156px;
-                background: #FFFFFF;
+                width: 100%;
                 margin-bottom: 6rem;
-                border: 2px solid #FCF3F3;
+                // border: 2px solid #FCF3F3;
                 border-radius: 30px;
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
                 // padding: 1rem 0;
                 .box-text {
-                    border-left: 1px solid #DBDBDB;
+                    background: #ffffff;
+                    box-shadow: 0px 4px 12px -1px rgba(85,85,85,0.1);
+                    width: 14%;
+                    padding: 1rem;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-evenly;
                     align-items: flex-start;
-                    padding: 0 1rem;
-                    height: 58px;
-                    &:first-child {
-                        border-left: none;
+                    border: none;
+                    border-radius: 20px;
+                    .icon {
+                        margin-bottom: 1.5rem;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        padding: 1rem;
+                        border-radius: 50%;
+                        &.purple {
+                            background: #f2efff;
+                        }
+                        &.green {
+                            background: #ebfcf1;
+                        }
+                        &.blue {
+                            background: #e8f9fd;
+                        }
+                        &.red {
+                            background: #ffeded;
+                        }
+                        &.black {
+                            background: #ededed;
+                        }
+                        svg {
+                            width: 32px;
+                            height: 32px;
+                        }
                     }
                     .text-header {
                         color: #737373;
